// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $2,352,343,132,343.13
  </h1>
</div>
`;

exports[`should correctly render ExpenesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;
